examples/bad/share_mid_scope_live.mko
// Must fail: share still live (used after assign) — cannot mutate source.
fn main() {
    let mut x = 1
    share let s = share_int(x)
    x = 2
    print_int(share_get(s))
}
